include/constantine_pasta.h

typedef __SIZE_TYPE__    size_t;
typedef __PTRDIFF_TYPE__ ptrdiff_t;
typedef __UINT8_TYPE__   uint8_t;
typedef size_t           secret_word;
typedef size_t           secret_bool;
typedef uint8_t          byte;
typedef struct { secret_word limbs[words_required(255)]; } pallas_fp;
typedef struct { secret_word limbs[words_required(255)]; } vesta_fr;
typedef struct { secret_word limbs[words_required(255)]; } vesta_fp;
typedef struct { vesta_fp x, y; } vesta_ec_aff;
typedef struct { vesta_fp x, y, z; } vesta_ec_jac;
typedef struct { vesta_fp x, y, z; } vesta_ec_prj;
void        ctt_vesta_fr_unmarshalBE(vesta_fr* dst, const byte src[], ptrdiff_t src_len);
void        ctt_vesta_fr_marshalBE(byte dst[], ptrdiff_t dst_len, const vesta_fr* src);
secret_bool ctt_vesta_fr_is_eq(const vesta_fr* a, const vesta_fr* b);
secret_bool ctt_vesta_fr_is_zero(const vesta_fr* a);
secret_bool ctt_vesta_fr_is_one(const vesta_fr* a);
secret_bool ctt_vesta_fr_is_minus_one(const vesta_fr* a);
void        ctt_vesta_fr_set_zero(vesta_fr* a);
void        ctt_vesta_fr_set_one(vesta_fr* a);
void        ctt_vesta_fr_set_minus_one(vesta_fr* a);
void        ctt_vesta_fr_neg(vesta_fr* r, const vesta_fr* a);
void        ctt_vesta_fr_neg_in_place(vesta_fr* a);
void        ctt_vesta_fr_sum(vesta_fr* r, const vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_add_in_place(vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_diff(vesta_fr* r, const vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_sub_in_place(vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_double(vesta_fr* r, const vesta_fr* a);
void        ctt_vesta_fr_double_in_place(vesta_fr* a);
void        ctt_vesta_fr_prod(vesta_fr* r, const vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_mul_in_place(vesta_fr* a, const vesta_fr* b);
void        ctt_vesta_fr_square(vesta_fr* r, const vesta_fr* a);
void        ctt_vesta_fr_square_in_place(vesta_fr* a);
void        ctt_vesta_fr_div2(vesta_fr* a);
void        ctt_vesta_fr_inv(vesta_fr* r, const vesta_fr* a);
void        ctt_vesta_fr_inv_in_place(vesta_fr* a);
void        ctt_vesta_fr_ccopy(vesta_fr* a, const vesta_fr* b, const secret_bool ctl);
void        ctt_vesta_fr_cswap(vesta_fr* a, vesta_fr* b, const secret_bool ctl);
void        ctt_vesta_fr_cset_zero(vesta_fr* a, const secret_bool ctl);
void        ctt_vesta_fr_cset_one(vesta_fr* a, const secret_bool ctl);
void        ctt_vesta_fr_cneg_in_place(vesta_fr* a, const secret_bool ctl);
void        ctt_vesta_fr_cadd_in_place(vesta_fr* a, const vesta_fr* b, const secret_bool ctl);
void        ctt_vesta_fr_csub_in_place(vesta_fr* a, const vesta_fr* b, const secret_bool ctl);
void        ctt_vesta_fp_unmarshalBE(vesta_fp* dst, const byte src[], ptrdiff_t src_len);
void        ctt_vesta_fp_marshalBE(byte dst[], ptrdiff_t dst_len, const vesta_fp* src);
secret_bool ctt_vesta_fp_is_eq(const vesta_fp* a, const vesta_fp* b);
secret_bool ctt_vesta_fp_is_zero(const vesta_fp* a);
secret_bool ctt_vesta_fp_is_one(const vesta_fp* a);
secret_bool ctt_vesta_fp_is_minus_one(const vesta_fp* a);
void        ctt_vesta_fp_set_zero(vesta_fp* a);
void        ctt_vesta_fp_set_one(vesta_fp* a);
void        ctt_vesta_fp_set_minus_one(vesta_fp* a);
void        ctt_vesta_fp_neg(vesta_fp* r, const vesta_fp* a);
void        ctt_vesta_fp_neg_in_place(vesta_fp* a);
void        ctt_vesta_fp_sum(vesta_fp* r, const vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_add_in_place(vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_diff(vesta_fp* r, const vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_sub_in_place(vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_double(vesta_fp* r, const vesta_fp* a);
void        ctt_vesta_fp_double_in_place(vesta_fp* a);
void        ctt_vesta_fp_prod(vesta_fp* r, const vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_mul_in_place(vesta_fp* a, const vesta_fp* b);
void        ctt_vesta_fp_square(vesta_fp* r, const vesta_fp* a);
void        ctt_vesta_fp_square_in_place(vesta_fp* a);
void        ctt_vesta_fp_div2(vesta_fp* a);
void        ctt_vesta_fp_inv(vesta_fp* r, const vesta_fp* a);
void        ctt_vesta_fp_inv_in_place(vesta_fp* a);
void        ctt_vesta_fp_ccopy(vesta_fp* a, const vesta_fp* b, const secret_bool ctl);
void        ctt_vesta_fp_cswap(vesta_fp* a, vesta_fp* b, const secret_bool ctl);
void        ctt_vesta_fp_cset_zero(vesta_fp* a, const secret_bool ctl);
void        ctt_vesta_fp_cset_one(vesta_fp* a, const secret_bool ctl);
void        ctt_vesta_fp_cneg_in_place(vesta_fp* a, const secret_bool ctl);
void        ctt_vesta_fp_cadd_in_place(vesta_fp* a, const vesta_fp* b, const secret_bool ctl);
void        ctt_vesta_fp_csub_in_place(vesta_fp* a, const vesta_fp* b, const secret_bool ctl);
secret_bool ctt_vesta_fp_is_square(const vesta_fp* a);
void        ctt_vesta_fp_invsqrt(vesta_fp* r, const vesta_fp* a);
secret_bool ctt_vesta_fp_invsqrt_in_place(vesta_fp* r, const vesta_fp* a);
void        ctt_vesta_fp_sqrt_in_place(vesta_fp* a);
secret_bool ctt_vesta_fp_sqrt_if_square_in_place(vesta_fp* a);
void        ctt_vesta_fp_sqrt_invsqrt(vesta_fp* sqrt, vesta_fp* invsqrt, const vesta_fp* a);
secret_bool ctt_vesta_fp_sqrt_invsqrt_if_square(vesta_fp* sqrt, vesta_fp* invsqrt, const vesta_fp* a);
secret_bool ctt_vesta_fp_sqrt_ratio_if_square(vesta_fp* r, const vesta_fp* u, const vesta_fp* v);
secret_bool ctt_vesta_ec_aff_is_eq(const vesta_ec_aff* P, const vesta_ec_aff* Q);
void        ctt_vesta_ec_aff_ccopy(vesta_ec_aff* P, const vesta_ec_aff* Q, const secret_bool ctl);
secret_bool ctt_vesta_ec_aff_is_on_curve(const pallas_fp* x, const pallas_fp* y);
void        ctt_vesta_ec_aff_neg(vesta_ec_aff* P, const vesta_ec_aff* Q);
void        ctt_vesta_ec_aff_neg_in_place(vesta_ec_aff* P);
secret_bool ctt_vesta_ec_jac_is_eq(const vesta_ec_jac* P, const vesta_ec_jac* Q);
void        ctt_vesta_ec_jac_ccopy(vesta_ec_jac* P, const vesta_ec_jac* Q, const secret_bool ctl);
void        ctt_vesta_ec_jac_neg(vesta_ec_jac* P, const vesta_ec_jac* Q);
void        ctt_vesta_ec_jac_neg_in_place(vesta_ec_jac* P);
void        ctt_vesta_ec_jac_cneg_in_place(vesta_ec_jac* P, const secret_bool ctl);
void        ctt_vesta_ec_jac_sum(vesta_ec_jac* r, const vesta_ec_jac* P, const vesta_ec_jac* Q);
void        ctt_vesta_ec_jac_add_in_place(vesta_ec_jac* P, const vesta_ec_jac* Q);
void        ctt_vesta_ec_jac_diff(vesta_ec_jac* r, const vesta_ec_jac* P, const vesta_ec_jac* Q);
void        ctt_vesta_ec_jac_double(vesta_ec_jac* r, const vesta_ec_jac* P);