constantine-rust/constantine-sys/src/bindings64.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vesta_fr"][::core::mem::size_of::<vesta_fr>() - 32usize];
    ["Alignment of vesta_fr"][::core::mem::align_of::<vesta_fr>() - 8usize];
    ["Offset of field: vesta_fr::limbs"][::core::mem::offset_of!(vesta_fr, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct vesta_fp {
    pub limbs: [secret_word; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vesta_fp"][::core::mem::size_of::<vesta_fp>() - 32usize];
    ["Alignment of vesta_fp"][::core::mem::align_of::<vesta_fp>() - 8usize];
    ["Offset of field: vesta_fp::limbs"][::core::mem::offset_of!(vesta_fp, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct vesta_ec_aff {
    pub x: vesta_fp,
    pub y: vesta_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vesta_ec_aff"][::core::mem::size_of::<vesta_ec_aff>() - 64usize];
    ["Alignment of vesta_ec_aff"][::core::mem::align_of::<vesta_ec_aff>() - 8usize];
    ["Offset of field: vesta_ec_aff::x"][::core::mem::offset_of!(vesta_ec_aff, x) - 0usize];
    ["Offset of field: vesta_ec_aff::y"][::core::mem::offset_of!(vesta_ec_aff, y) - 32usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct vesta_ec_jac {
    pub x: vesta_fp,
    pub y: vesta_fp,
    pub z: vesta_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vesta_ec_jac"][::core::mem::size_of::<vesta_ec_jac>() - 96usize];
    ["Alignment of vesta_ec_jac"][::core::mem::align_of::<vesta_ec_jac>() - 8usize];
    ["Offset of field: vesta_ec_jac::x"][::core::mem::offset_of!(vesta_ec_jac, x) - 0usize];
    ["Offset of field: vesta_ec_jac::y"][::core::mem::offset_of!(vesta_ec_jac, y) - 32usize];
    ["Offset of field: vesta_ec_jac::z"][::core::mem::offset_of!(vesta_ec_jac, z) - 64usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct vesta_ec_prj {
    pub x: vesta_fp,
    pub y: vesta_fp,
    pub z: vesta_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vesta_ec_prj"][::core::mem::size_of::<vesta_ec_prj>() - 96usize];
    ["Alignment of vesta_ec_prj"][::core::mem::align_of::<vesta_ec_prj>() - 8usize];
    ["Offset of field: vesta_ec_prj::x"][::core::mem::offset_of!(vesta_ec_prj, x) - 0usize];
    ["Offset of field: vesta_ec_prj::y"][::core::mem::offset_of!(vesta_ec_prj, y) - 32usize];
    ["Offset of field: vesta_ec_prj::z"][::core::mem::offset_of!(vesta_ec_prj, z) - 64usize];
};
unsafe extern "C" {
    pub fn ctt_big255_from_vesta_fr(dst: *mut big255, src: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_from_big255(dst: *mut vesta_fr, src: *const big255);
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_vesta_fr_unmarshalBE(dst: *mut vesta_fr, src: *const byte, src_len: usize) -> bool;
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_vesta_fr_marshalBE(dst: *mut byte, dst_len: usize, src: *const vesta_fr) -> bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_is_eq(a: *const vesta_fr, b: *const vesta_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_is_zero(a: *const vesta_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_is_one(a: *const vesta_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_is_minus_one(a: *const vesta_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_set_zero(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_set_one(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_set_minus_one(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_neg(r: *mut vesta_fr, a: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_neg_in_place(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_sum(r: *mut vesta_fr, a: *const vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_add_in_place(a: *mut vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_diff(r: *mut vesta_fr, a: *const vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_sub_in_place(a: *mut vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_double(r: *mut vesta_fr, a: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_double_in_place(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_prod(r: *mut vesta_fr, a: *const vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_mul_in_place(a: *mut vesta_fr, b: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_square(r: *mut vesta_fr, a: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_square_in_place(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_div2(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_inv(r: *mut vesta_fr, a: *const vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_inv_in_place(a: *mut vesta_fr);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_ccopy(a: *mut vesta_fr, b: *const vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_cswap(a: *mut vesta_fr, b: *mut vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_cset_zero(a: *mut vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_cset_one(a: *mut vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_cneg_in_place(a: *mut vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_cadd_in_place(a: *mut vesta_fr, b: *const vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fr_csub_in_place(a: *mut vesta_fr, b: *const vesta_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_big255_from_vesta_fp(dst: *mut big255, src: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_from_big255(dst: *mut vesta_fp, src: *const big255);
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_vesta_fp_unmarshalBE(dst: *mut vesta_fp, src: *const byte, src_len: usize) -> bool;
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_vesta_fp_marshalBE(dst: *mut byte, dst_len: usize, src: *const vesta_fp) -> bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_is_eq(a: *const vesta_fp, b: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_is_zero(a: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_is_one(a: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_is_minus_one(a: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_set_zero(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_set_one(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_set_minus_one(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_neg(r: *mut vesta_fp, a: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_neg_in_place(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sum(r: *mut vesta_fp, a: *const vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_add_in_place(a: *mut vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_diff(r: *mut vesta_fp, a: *const vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sub_in_place(a: *mut vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_double(r: *mut vesta_fp, a: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_double_in_place(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_prod(r: *mut vesta_fp, a: *const vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_mul_in_place(a: *mut vesta_fp, b: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_square(r: *mut vesta_fp, a: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_square_in_place(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_div2(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_inv(r: *mut vesta_fp, a: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_inv_in_place(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_ccopy(a: *mut vesta_fp, b: *const vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_cswap(a: *mut vesta_fp, b: *mut vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_cset_zero(a: *mut vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_cset_one(a: *mut vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_cneg_in_place(a: *mut vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_cadd_in_place(a: *mut vesta_fp, b: *const vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_csub_in_place(a: *mut vesta_fp, b: *const vesta_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_is_square(a: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_invsqrt(r: *mut vesta_fp, a: *const vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_invsqrt_in_place(r: *mut vesta_fp, a: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sqrt_in_place(a: *mut vesta_fp);
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sqrt_if_square_in_place(a: *mut vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sqrt_invsqrt(
        sqrt: *mut vesta_fp,
        invsqrt: *mut vesta_fp,
        a: *const vesta_fp,
    );
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sqrt_invsqrt_if_square(
        sqrt: *mut vesta_fp,
        invsqrt: *mut vesta_fp,
        a: *const vesta_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_fp_sqrt_ratio_if_square(
        r: *mut vesta_fp,
        u: *const vesta_fp,
        v: *const vesta_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_is_eq(P: *const vesta_ec_aff, Q: *const vesta_ec_aff) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_is_neutral(P: *const vesta_ec_aff) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_set_neutral(P: *mut vesta_ec_aff);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_ccopy(P: *mut vesta_ec_aff, Q: *const vesta_ec_aff, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_is_on_curve(x: *const vesta_fp, y: *const vesta_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_neg(P: *mut vesta_ec_aff, Q: *const vesta_ec_aff);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_aff_neg_in_place(P: *mut vesta_ec_aff);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_is_eq(P: *const vesta_ec_jac, Q: *const vesta_ec_jac) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_is_neutral(P: *const vesta_ec_jac) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_set_neutral(P: *mut vesta_ec_jac);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_ccopy(P: *mut vesta_ec_jac, Q: *const vesta_ec_jac, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_neg(P: *mut vesta_ec_jac, Q: *const vesta_ec_jac);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_neg_in_place(P: *mut vesta_ec_jac);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_cneg_in_place(P: *mut vesta_ec_jac, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_sum(
        r: *mut vesta_ec_jac,
        P: *const vesta_ec_jac,
        Q: *const vesta_ec_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_add_in_place(P: *mut vesta_ec_jac, Q: *const vesta_ec_jac);
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_diff(
        r: *mut vesta_ec_jac,
        P: *const vesta_ec_jac,
        Q: *const vesta_ec_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_vesta_ec_jac_double(r: *mut vesta_ec_jac, P: *const vesta_ec_jac);
}
